# SPES

./: .gitignore  README.md  pyproject.toml
configs/spes_experiments/: centralized_moe_1b_slimpajama_100b_tokens.yaml
configs/spes_experiments/dilico_fedavg_adamw_moe_1b_slimpajama_100b_tokens_bsz256_4nodes/: node0.yaml  node1.yaml  node2.yaml  node3.yaml
configs/spes_experiments/spes_moe_1b_slimpajama_100b_tokens_bsz256_4nodes/: node_0.yaml  node_1.yaml  node_2.yaml  node_3.yaml
configs/spes_experiments_scaling/: spes_moe_1b_7b_4_nodes.yaml  spes_moe_3b_9b_4nodes_norm_router.yaml
data_process_scripts/: list_processed_files.sh  tokenize_data.py  tokenize_example.sh
eval_scripts/: convet_model_to_hf.sh  convet_model_to_hf_qwenmoe_unshard.sh  convet_model_to_hf_unshard.sh  eval_full.sh
evaluation/: README.md  empty_workspace.py  requirements.txt  see_available_tasks.py  tango-in-beaker.yml
evaluation/experiments/: evaluation_2023_07_26.jsonnet  test_config.jsonnet  utils.libsonnet
evaluation/experiments/task_sets/: eval_suite_ppl_val_v2_small.libsonnet  eval_suite_ppl_val_v3.libsonnet  eval_suite_ppl_val_v3_small.libsonnet  gen_tasks.libsonnet  rc20_tasks.libsonnet  summary_tasks.libsonnet  task_utils.libsonnet
evaluation/steps/: __init__.py  get_model.py  run_catwalk.py  wandb_metrics.py
run_scripts/: run_cluster.sh  run_parameter_server.sh  run_single_node.sh  wandb_sync.sh
scripts/: add_code_eval.py  compare_model_state.py  compare_module_outputs.py  compare_wandb_configs.py  convert_hf_to_olmoe_custom.py  convert_olmo2_to_hf.py  convert_olmo_to_hf_new.py  convert_olmoe_custom_to_hf.py  convert_olmoe_custom_to_hf_qwen_moe.py  convert_olmoe_to_hf.py  convert_pt_to_safetensors.py  convert_qwen_hf_to_olmo.py  flops_by_perf_figure.py  group_name_from_wandb.py  init_config.py  inspect_train_data.py  ladder.ipynb  ladder.py  learning_rate_at_step_from_wandb.py  list_evals_from_oe_eval.py  microanneal_config_maker.py  olmo2_modal_openai.py  peteish7_config_maker.py  prepare_changelog.py  prepare_memmap_dataset.py  prepare_tulu_data.py  release.sh  release_notes.py  run_dataloader.py  s3_unshard_to_hf.py  show_model_size.py  split_gz.py  storage_cleaner.py  test_entrypoint.sh  train.py  unshard.py  unshard_new.py  upcycling_qwen3_to_olmoe.py  validate_custom_moe_impl.py  wandb_change_group.py
scripts/augusta/: Dockerfile  peteish1-launch.sh  peteish1-seed-anneal-launch.sh  peteish1-seed-anneal.sh  peteish1.sh  peteish13-launch.sh  peteish13-seed-anneal-launch.sh  peteish13-seed-anneal.sh  peteish13.sh  peteish7-anneal-launch.sh  peteish7-anneal.sh  peteish7-lr-anneal-launch.sh  peteish7-lr-anneal.sh  peteish7-medlr-launch.sh  peteish7-medlr.sh
scripts/beaker/: beaker_interactive.sh  ladder-launch.sh  ladder.sh  unshard-launch.sh  unshard.sh
scripts/beaker/annealing/: launch_annealing.sh  launch_annealing_jupiter.sh  launch_annealing_peteish7.sh
scripts/beaker/microannealing/: launch_microannealing_peteish7.sh
scripts/beaker/peteish/: peteish1-launch.sh  peteish1.sh  peteish13-highlr-launch.sh  peteish13-highlr.sh  peteish13-medlr-launch.sh  peteish13-medlr.sh  peteish7-anneal-launch.sh  peteish7-anneal.sh  peteish7-launch.sh  peteish7.sh
spes/: __init__.py  aliases.py  beam_search.py  checkpoint.py  config.py  custom_sparse_glu_impl.py  decayed_load_balance_loss.py  exceptions.py  model.py  optim.py  safetensors_util.py  tokenizer.py  torch_util.py  train.py  util.py
spes/data/: __init__.py  collator.py  custom_datasets.py  iterable_dataset.py  memmap_dataset.py  named_data_mixes.py  util.py
spes/eval/: __init__.py  downstream.py  evaluator.py
spes/spes/: __init__.py  federated.proto  federated_pb2.py  federated_pb2_grpc.py  spes_server.py  spes_server_knowledge_transfer.py  spes_utils.py
(+5 files in other folders)
